--- a/main.css
+++ b/main.css
@@ -18,6 +18,10 @@ body {
   max-width: 1764px;
   margin: 0 auto;
 }
+.container {
+  max-width: 1150px;
+  margin: 0 auto;
+}
 
 .d-none {
   display: none;
