--- a/style/style.scss
+++ b/style/style.scss
@@ -3,6 +3,8 @@
 :root {
     --RDX: "Rajdhani", sans-serif;
     --Poppins: "Poppins", sans-serif;
+    --Inter: "Inter", sans-serif;
+    --ALS: "Alumni Sans", sans-serif;
     --black: #13141F;
 }
 
@@ -62,6 +64,7 @@
 }
 
 .header-wrap .wallet-btn {
+    clip-path: polygon(0 0, calc(100% - 10px) 0, 100% 10px, 100% 100%, 0 100%, 0 0);
     cursor: pointer;
     font-family: var(--RDX);
     font-weight: 700;
@@ -255,85 +258,313 @@
 
 }
 
-.tab-numbers {
-    justify-content: center;
+// home series end
+
+// Stake series start
+#stake {
+    background: linear-gradient(0deg, #191C25 0%, rgba(25, 28, 37, 0) 100%);
     margin-top: 50px;
-    .tab-series {
-        list-style: none;
-        flex-direction: column;
-        margin-left: 5px;
-        align-items: end;
 
-        .number-line {
-            .line {
-                display: block;
-                background: #474750;
-                width: 121.06px;
-                height: 3px;
-                margin-right: 5px;
-            }
-            .line-2 {
-                display: block;
-                    background: #474750;
-                    width:60.53px;
-                    height: 3px;
-                margin-left: 5px;
-                }
-            .number {
-                font-family: var(--RDX);
-                width: 32px;
-                height: 32px;
-                background: #474750;
-                border-radius: 100%;
-                font-weight: 700;
-                font-size: 16px;
-                line-height: 24px;
-                color: var(--black);
+    .container {
+        padding: 0 40px;
+    }
 
-                span {
+    .tab-numbers {
+        justify-content: center;
+        margin-top: 50px;
+
+        .tab-series {
+            list-style: none;
+            flex-direction: column;
+            margin-left: 5px;
+            align-items: end;
+
+            .number-line {
+                .line {
                     display: block;
-                    width: fit-content;
+                    background: #474750;
+                    width: 121.06px;
+                    height: 3px;
+                    margin-right: 5px;
+                }
+
+                .line-2 {
+                    display: block;
+                    background: #474750;
+                    width: 60.53px;
+                    height: 3px;
+                    margin-left: 5px;
+                }
+
+                .number {
+                    font-family: var(--RDX);
+                    width: 32px;
+                    height: 32px;
+                    background: #474750;
+                    border-radius: 100%;
+                    font-weight: 700;
+                    font-size: 16px;
+                    line-height: 24px;
+                    color: var(--black);
+
+                    span {
+                        display: block;
+                        width: fit-content;
+                    }
+                }
+            }
+
+            .num-text {
+                display: block;
+                font-family: var(--RDX);
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 22px;
+                color: #ffff;
+                opacity: 0.5;
+                transform: translateX(20px);
+            }
+
+            &:first-child {
+                .number-line .line {
+                    width: 60.53px;
+                }
+
+                .num-text {
+                    transform: translate(10px);
+                }
+            }
+
+            &:nth-child(3) {
+                .num-text {
+                    transform: translate(6px);
+                }
+            }
+
+            &:nth-child(4) {
+                .num-text {
+                    transform: translate(25px);
+                }
+            }
+
+            &:nth-child(5) {
+                .num-text {
+                    transform: translate(-50px);
                 }
             }
         }
 
-        .num-text {
-            display: block;
+        .tab-series-active {
+            .number-line {
+                .line {
+                    background: linear-gradient(270deg, #72F34B 0%, rgba(114, 243, 75, 0) 100%);
+                }
+
+                .number {
+                    background-color: #72F34B;
+                }
+            }
+        }
+    }
+
+    .stake-title {
+        margin-top: 35px;
+        margin-bottom: 25px;
+
+        h1 {
+            font-family: var(--RDX);
+            font-weight: 700;
+            font-size: 30px;
+            line-height: 36px;
+            color: #fff;
+        }
+
+        h5 {
+            font-family: var(--Poppins);
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 22px;
+            color: #fff;
+        }
+    }
+}
+
+.connect {
+    .connect-wrap {
+        width: 100%;
+    }
+}
+
+.connect-series {
+    padding: 22px 24px;
+    width: 100%;
+    margin-bottom: 24px;
+    background: rgba(107, 114, 128, 0.2);
+    border-radius: 3.2px;
+
+    .connect-cancel {
+        width: 36px;
+
+        img {
+            width: 100%;
+        }
+    }
+
+    h5 {
+        font-family: var(--Poppins);
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+        color: #Ffff;
+        margin-left: 25px;
+    }
+
+    .wallet-btn {
+        clip-path: polygon(0 0, calc(100% - 10px) 0, 100% 10px, 100% 100%, 0 100%, 0 0);
+        cursor: pointer;
+        font-family: var(--RDX);
+        font-weight: 700;
+        font-size: 13px;
+        padding: 11px 32px 13px 32px;
+        background: #6CDB00;
+        border-radius: 2px;
+        border: transparent;
+        color: var(--black);
+    }
+}
+
+.connect-right {
+    width: 240px;
+    margin-left: 24px;
+
+    .connect-right-series {
+        margin-bottom: 24px;
+        padding: 17px 15px;
+        background: linear-gradient(270deg, #191C25 0%, rgba(25, 28, 37, 0) 100%), rgba(107, 114, 128, 0.2);
+        border-radius: 3.2px;
+
+        h3 {
             font-family: var(--RDX);
             font-weight: 700;
             font-size: 14px;
             line-height: 22px;
             color: #ffff;
             opacity: 0.5;
-            transform: translateX(20px);
+        }
+    }
+}
+
+.connect-footer {
+    background: rgba(107, 114, 128, 0.2);
+    padding: 16px 40px;
+
+    .checkbox {
+        input {
+            margin-right: 5px;
         }
 
-        &:first-child {
-            .number-line .line {
-                width: 60.53px;
-                    background: linear-gradient(270deg, #72F34B 0%, rgba(114, 243, 75, 0) 100%);
+        label {
+            font-family: var(--Poppins);
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 23px;
+            color: #fff;
+
+            a {
+                color: #72F34B;
+                text-decoration: none;
+            }
+        }
+    }
+
+    .next-btn {
+        font-family: var(--RDX);
+        background: rgba(107, 114, 128, 0.7);
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 22px;
+        color: var(--black);
+        padding: 7px 40px;
+        border: none;
+        cursor: pointer;
+        clip-path: polygon(0 0, calc(100% - 10px) 0, 100% 10px, 100% 100%, 0 100%, 0 0);
+    }
+}
+
+// Stake series end
+
+// Footer series start
+#footer {
+    margin-top: 40px;
+    background-color: #000;
+
+    .main-container {
+        padding: 0 48px;
+    }
+
+    .footer-top {
+        padding-bottom: 50px;
+        border-bottom: 1px solid #474750;
+        padding-top: 100px;
+
+        h5 {
+            margin-top: 20px;
+            font-family: var(--Inter);
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 17px;
+            color: #ffff;
+        }
+
+        .footer-network {
+            li {
+                margin-left: 8px;
+                list-style: none;
+
+                &:first-child {
+                    margin: 0;
                 }
-            .num-text {
-                transform: translate(10px);
             }
         }
+    }
 
-        &:nth-child(3) {
-            .num-text {
-                transform: translate(6px);
+    .footer-wrap {
+        padding: 50px 0;
+
+        .footer-series {
+            li {
+                list-style: none;
+                margin-bottom: 12px;
+
+                h4 {
+                    font-family: var(--ALS);
+                    font-weight: 500;
+                    font-size: 18px;
+                    line-height: 24px;
+                    color: #9296A2;
+                }
+
+                &:first-child {
+                    margin-bottom: 20px;
+                }
+
+                a {
+                    font-family: var(--Inter);
+                    font-weight: 400;
+                    font-size: 14px;
+                    line-height: 21px;
+                    text-decoration: none;
+                    color: #EBEDF0;
+                }
             }
-        }
-        &:nth-child(4) {
-            .num-text {
-                transform: translate(25px);
-            }
-        }
-        &:nth-child(5) {
-            .num-text {
-                transform: translate(-50px);
+
+            .race-for {
+                a {
+                    color: #FC389C;
+                }
             }
         }
     }
 }
 
-// home series end
+// Footer series end
