--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,47 @@
   --black: #13141F;
 }
 
+#sidebar {
+  background: #1E2127;
+  border: 1px solid #1E2127;
+  border-radius: 10px;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  padding: 40px 22px;
+  flex-direction: column;
+}
+#sidebar .sidebar-logo {
+  display: block;
+  margin-bottom: 40px;
+}
+#sidebar .sidebar-link li {
+  cursor: pointer;
+  list-style: none;
+  flex-direction: column;
+  margin-bottom: 20px;
+  border-radius: 16px;
+  width: 56px;
+  height: 56px;
+}
+#sidebar .sidebar-link li span {
+  font-family: var(--RDX);
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  color: #777786;
+  margin-top: 5px;
+}
+#sidebar .sidebar-link .sidebar-item-active {
+  background: rgba(255, 255, 255, 0.1);
+}
+#sidebar .sidebar-link .sidebar-item-active svg path {
+  stroke: #fff;
+}
+#sidebar .sidebar-link .sidebar-item-active span {
+  color: #fff;
+}
+
 #header {
   padding: 24px 0;
 }
@@ -223,6 +264,7 @@
 #stake {
   background: linear-gradient(0deg, #191C25 0%, rgba(25, 28, 37, 0) 100%);
   margin-top: 50px;
+  padding-bottom: 40px;
 }
 #stake .container {
   padding: 0 40px;
@@ -408,7 +450,6 @@
 }
 
 #footer {
-  margin-top: 40px;
   background-color: #000;
 }
 #footer .main-container {
