--- a/style/style.scss
+++ b/style/style.scss
@@ -8,6 +8,59 @@
     --black: #13141F;
 }
 
+// Sidebar series start
+#sidebar {
+    background: #1E2127;
+    border: 1px solid #1E2127;
+    border-radius: 10px;
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    padding: 40px 22px;
+    flex-direction: column;
+    .sidebar-logo {
+        display: block;
+        margin-bottom: 40px;
+    }
+
+    .sidebar-link {
+        li {
+            cursor: pointer;
+            list-style: none;
+            flex-direction: column;
+            margin-bottom: 20px;
+            border-radius: 16px;
+            width: 56px;
+            height: 56px;
+
+            span {
+                font-family: var(--RDX);
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 16px;
+                color: #777786;
+                margin-top: 5px;
+            }
+        }
+
+        .sidebar-item-active {
+            background: rgba(255, 255, 255, 0.1);
+
+            svg {
+                path {
+                    stroke: #fff;
+                }
+            }
+
+            span {
+                color: #fff;
+            }
+        }
+    }
+}
+
+// Sidebar series end
+
 // header series start
 #header {
     padding: 24px 0;
@@ -264,6 +317,7 @@
 #stake {
     background: linear-gradient(0deg, #191C25 0%, rgba(25, 28, 37, 0) 100%);
     margin-top: 50px;
+    padding-bottom: 40px;
 
     .container {
         padding: 0 40px;
@@ -495,7 +549,7 @@
 
 // Footer series start
 #footer {
-    margin-top: 40px;
+
     background-color: #000;
 
     .main-container {
@@ -568,3 +622,4 @@
 }
 
 // Footer series end
+
