Media 1000px gacha

--- a/style/style.css
+++ b/style/style.css
@@ -502,4 +502,56 @@
 }
 #footer .footer-wrap .footer-series .race-for a {
   color: #FC389C;
+}
+
+@media (max-width: 1835px) {
+  .main-container {
+    max-width: 1480px;
+  }
+}
+@media (max-width: 1735px) {
+  .main-container {
+    max-width: 1350px;
+  }
+}
+@media (max-width: 1735px) {
+  .main-container {
+    max-width: 1250px;
+  }
+}
+@media (max-width: 1510px) {
+  .wrapper {
+    margin-left: 150px;
+  }
+  .main-container {
+    max-width: 1150px;
+  }
+}
+@media (max-width: 1345px) {
+  .wrapper {
+    margin-left: 100px;
+  }
+  #sidebar {
+    top: 0;
+    left: 0;
+  }
+}
+@media (max-width: 1300px) {
+  .main-container {
+    max-width: 1055px;
+  }
+  .container {
+    max-width: 1055px;
+  }
+}
+@media (max-width: 1190px) {
+  .main-container {
+    max-width: 900px;
+  }
+  .container {
+    max-width: 900px;
+  }
+  #footer .main-container {
+    padding: 0;
+  }
 }/*# sourceMappingURL=style.css.map */
