--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,99 @@
   --black: #13141F;
 }
 
+#modal {
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  background: rgba(57, 57, 64, 0.5568627451);
+  width: 100%;
+  height: 100%;
+}
+#modal .modal-wrap {
+  width: 600px;
+  height: -moz-fit-content;
+  height: fit-content;
+  -webkit-clip-path: polygon(0 3%, 13% 3%, 18% 0, 100% 0, 100% 100%, 0 100%);
+          clip-path: polygon(0 3%, 13% 3%, 18% 0, 100% 0, 100% 100%, 0 100%);
+  padding: 50px 20px 20px 20px;
+  background-color: #393940;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#modal .modal-wrap .modal-title h2 {
+  font-family: var(--RDX);
+  font-size: 25px;
+  color: #fff;
+  line-height: 120%;
+  margin-bottom: 20px;
+  font-weight: 700px;
+}
+#modal .modal-wrap .modal-title h4 {
+  font-family: var(--RDX);
+  font-size: 16px;
+  color: white;
+  font-weight: 600;
+}
+#modal .modal-wrap .modal-title .modal-check {
+  margin-top: 10px;
+  cursor: pointer;
+}
+#modal .modal-wrap .modal-title .modal-check input {
+  margin-right: 5px;
+}
+#modal .modal-wrap .modal-title .modal-check label {
+  font-family: var(--Poppins);
+  line-height: 120%;
+  font-weight: 400;
+  font-size: 16px;
+  color: #fff;
+}
+#modal .modal-wrap .modal-title .modal-check label a {
+  text-decoration: none;
+  color: #72F34B;
+}
+#modal .modal-wrap h3 {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  color: #9296A2;
+  font-size: 16px;
+  font-family: var(--RDX);
+}
+#modal .modal-wrap .modal-newtwork {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+#modal .modal-wrap .modal-newtwork .series {
+  background-color: #474750;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 16px 0;
+  width: 31%;
+  margin-bottom: 15px;
+}
+#modal .modal-wrap .modal-newtwork .series .series-img {
+  width: 45px;
+}
+#modal .modal-wrap .modal-newtwork .series .series-img img {
+  width: 100%;
+}
+#modal .modal-wrap .modal-newtwork .series p {
+  margin-top: 10px;
+  font-family: var(--Poppins);
+  font-size: 16px;
+  color: #fff;
+}
+#modal .modal-wrap .modal-newtwork-2 .series {
+  width: 24%;
+}
+
 #sidebar {
   background: #1E2127;
   border: 1px solid #1E2127;
@@ -15,7 +108,9 @@
   top: 20px;
   left: 20px;
   padding: 40px 22px;
+  justify-content: start;
   flex-direction: column;
+  height: 100vh;
 }
 #sidebar .sidebar-logo {
   display: block;
@@ -553,5 +648,200 @@
   }
   #footer .main-container {
     padding: 0;
+  }
+  .ranks .rank-first-about {
+    width: 300px;
+    padding-top: 75px;
+  }
+}
+@media (max-width: 1035px) {
+  .main-container {
+    max-width: 800px;
+  }
+  .container {
+    max-width: 800px;
+  }
+  #stake .container {
+    padding: 0;
+  }
+}
+@media (max-width: 935px) {
+  .ranks .rank-first-about {
+    padding-top: 130px;
+  }
+  #header .header-wrap .search {
+    width: 350px;
+  }
+  #header .header-wrap .header-logo {
+    display: block;
+    margin-right: 20px;
+  }
+  .header-wrap .wallet-btn {
+    display: none;
+  }
+  .wrapper {
+    margin: 0;
+  }
+  #sidebar {
+    height: -moz-fit-content;
+    height: fit-content;
+    border-radius: 16px 16px 0px 0px;
+    z-index: 2;
+    padding: 20px;
+    top: auto;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+  #sidebar .sidebar-logo {
+    display: none;
+  }
+  #sidebar .sidebar-link {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  #sidebar .sidebar-link li {
+    margin: 0;
+  }
+  #sidebar .sidebar-link li span {
+    display: none;
+  }
+  .wrapper {
+    margin-bottom: 90px;
+  }
+}
+@media (max-width: 830px) {
+  .ranks .rank-first-about {
+    width: 100px;
+  }
+  .ranks .rank-first-about li {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .main-container {
+    max-width: 90%;
+  }
+  .container {
+    max-width: 90%;
+  }
+  .connect {
+    flex-direction: column;
+  }
+  .connect .connect-right {
+    width: 100%;
+    margin: 0;
+  }
+  .home-header .rank-about h3:last-child {
+    font-size: 14px;
+  }
+  #stake .tab-numbers .tab-series .number-line .line {
+    width: 65px;
+  }
+}
+@media (max-width: 675px) {
+  .home-header .rank-about h3 {
+    font-size: 12px;
+    line-height: 120%;
+  }
+  .home-header .rank-about h3 span {
+    display: none;
+  }
+  .home-header .rank-about h3:last-child {
+    font-size: 12px;
+  }
+  .home-header .rank-series .rank-img {
+    display: none;
+  }
+  .home-header > div:first-child {
+    padding: 0 10px;
+  }
+  .home-header .rank-series {
+    padding: 0 10px;
+  }
+  .main-container {
+    max-width: 95%;
+  }
+  .container {
+    max-width: 95%;
+  }
+  .footer-top {
+    align-items: start;
+    flex-direction: column;
+  }
+  .footer-network {
+    margin-top: 15px;
+  }
+  #footer .footer-wrap {
+    flex-wrap: wrap;
+  }
+  #footer .footer-wrap .footer-series {
+    width: -moz-fit-content;
+    width: fit-content;
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 570px) {
+  .home-wrap .ranks {
+    height: 250px;
+  }
+  .ranks .rank-first-about {
+    padding-top: 90px;
+  }
+  .connect-series {
+    padding: 10px;
+  }
+  .connect-series h5 {
+    margin-left: 8px;
+  }
+  #stake .tab-numbers .tab-series .number-line .line {
+    width: 35px;
+    height: 2px;
+  }
+  #stake .tab-numbers .tab-series .number-line .line-2 {
+    width: 35px;
+    height: 2px;
+  }
+  #stake .tab-numbers .tab-series:first-child .number-line .line {
+    width: 35px;
+    height: 2px;
+  }
+  #stake .tab-numbers .tab-series:nth-child(5) .num-text {
+    transform: translateX(-24px);
+  }
+  #stake .tab-numbers .tab-series .number-line .number {
+    width: 25px;
+    height: 25px;
+  }
+  .connect-series .wallet-btn {
+    padding: 11px 19px 13px 19px;
+  }
+  #stake .tab-numbers .tab-series .num-text {
+    font-size: 12px;
+  }
+  .connect-footer {
+    padding: 20px;
+  }
+}
+@media (max-width: 455px) {
+  #footer .footer-wrap .footer-series {
+    width: 100px;
+  }
+}
+@media (max-width: 415px) {
+  #stake .tab-numbers .tab-series .number-line .line-2 {
+    width: 14px;
+  }
+  #stake .tab-numbers .tab-series:first-child .number-line .line {
+    width: 18px;
+  }
+  #stake .tab-numbers .tab-series:nth-child(5) .num-text {
+    transform: translateX(0);
   }
 }/*# sourceMappingURL=style.css.map */
